--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,17 @@
 		   <artifactId>browser-opener</artifactId>
 		   <version>2.0.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.innoventsolutions.birt.runtime</groupId>
+		    <artifactId>org.eclipse.birt.runtime_4.8.0-20180626</artifactId>
+		    <version>4.8.0</version>
+		</dependency>
+		<dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<defaultGoal>spring-boot:run</defaultGoal>
