--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.ssl.key-alias=aakyatechapps.com
 server.ssl.enabled.HTTPS=true
 server.ssl.enabled.HTTP=false
 security.require-ssl=true
+google.maps.api=AIzaSyDsqxiDX4Pqfn7NUYzKFS2Nn2H4W5ywtaQ
 #logging.level.org.atmosphere = warn
 #spring.mustache.check-template-location = false
 
@@ -15,7 +16,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
-vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application,com.storedobject
+vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.aakhya.smartcall.application,com.storedobject,com.flowingcode
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 # To improve the performance during development.
@@ -33,3 +34,5 @@ spring.datasource.hikari.maxLifetime=1800000
 #To Auto-Generate Schema
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
+reports.relative.path=E:/Tools/reports/
+images.relative.path=E:/Tools/images/
